更新build,调整版本的信息，让工程能够顺利编译。